// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Action > execute() > should throw acknowledgment related errors 0 1`] = `
InputValidationError({
  "message": "1: Expected function, received string",
  "originalError": ZodError({
    "issues": [
      {
        "code": "invalid_type",
        "expected": "function",
        "message": "Expected function, received string",
        "path": [
          1,
        ],
        "received": "string",
      },
    ],
  }),
})
`;

exports[`Action > execute() > should throw acknowledgment related errors 1 1`] = `
OutputValidationError({
  "message": "0: Expected number, received string",
  "originalError": ZodError({
    "issues": [
      {
        "code": "invalid_type",
        "expected": "number",
        "message": "Expected number, received string",
        "path": [
          0,
        ],
        "received": "string",
      },
    ],
  }),
})
`;

exports[`Action > execute() > should throw input parsing error 1`] = `
InputValidationError({
  "message": "Array must contain at least 1 element(s)",
  "originalError": ZodError({
    "issues": [
      {
        "code": "too_small",
        "exact": false,
        "inclusive": true,
        "message": "Array must contain at least 1 element(s)",
        "minimum": 1,
        "path": [],
        "type": "array",
      },
    ],
  }),
})
`;
